# doomarkable

./: .gitignore  Cargo.toml  LICENSE  README.md  doomarkable.draft
.cargo/: config
.github/workflows/: check_and_build.yml
res/: default_screen.xcf
src/: blue_noise_dither.rs  evdev_keyboard.rs  layout.rs  main.rs
src/layout/: confirmexit.rs  confirmfullscreen.rs  controls.rs  keyboard.rs  mod.rs  settings.rs
