[package]
name = "doomarkable"
version = "0.3.4"
edition = "2018"
authors = ["Linus <linus@cosmos-ink.net>"]

# Using build script to generate the dither cache
# and compressing it at compilation so it can be
# included in the final binary.
build = "build/main.rs"

[build-dependencies]
image = "0.23"
zstd = "0.5"
once_cell = "1"

[profile.release.build-override]
# Makes dithered cache calculation about 25x faster!
opt-level = 2

[dependencies]
doomgeneric = { git = "https://github.com/LinusCDE/doomgeneric-rs.git", tag = "0.3.0-beta.2" }
libremarkable = "0.5.0"
once_cell = "1"
fxhash = "0.2"
mimalloc = { version = "0.1.17", default-features = false }
log = "0.4"
env_logger = "0.9"
#core_simd = { git = "https://github.com/rust-lang/portable-simd.git", rev = "721164247cd609d04dc8f0bb2483bde83f2a7fd6" }
# TODO: Bump to 0.9 once libremarkable has updated dependencies
zstd = "0.5"

[profile.release]
# Improves performance significantly
lto = "thin"
codegen-units = 1

# Maybe a slight performance increase. Not really worth it.
#panic = "abort"
